fix: change Integer to Long type