@@ -32,18 +32,18 @@ class IssueServiceTest {
     @Test
     @DisplayName("Status Management")
     void statusManagement() {
-        issueService.createStatus(1, "To Do", StatusCategory.TO_DO);
-        issueService.createStatus(1, "In Progress", StatusCategory.IN_PROGRESS);
+        issueService.createStatus(1L, "To Do", StatusCategory.TO_DO);
+        issueService.createStatus(1L, "In Progress", StatusCategory.IN_PROGRESS);
 
-        List<Status> statuses = issueService.getStatuses(1);
+        List<Status> statuses = issueService.getStatuses(1L);
         assertThat(statuses).hasSize(2);
-        assertThat(statuses.get(0).getName()).isEqualTo("To Do");
+        assertThat(statuses.getFirst().getName()).isEqualTo("To Do");
     }
 
     @Test
     @DisplayName("Issue CRUD")
     void issueCrud() {
-        Integer issueId = issueService.createIssue(1, "Login Bug", "Fix it", IssueType.BUG, Priority.HIGH);
+        Long issueId = issueService.createIssue(1, "Login Bug", "Fix it", IssueType.BUG, Priority.HIGH);
 
         Issue issue = issueService.getIssue(issueId);
         assertThat(issue.getTitle()).isEqualTo("Login Bug");
@@ -54,9 +54,9 @@ class IssueServiceTest {
     @Test
     @DisplayName("Patch Status and History Tracking")
     void patchStatusAndHistory() {
-        Integer issueId = issueService.createIssue(1, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
+        Long issueId = issueService.createIssue(1L, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
 
-        issueService.patchStatus(issueId, 2);
+        issueService.patchStatus(issueId, 2L);
 
         Issue updatedIssue = issueService.getIssue(issueId);
         assertThat(updatedIssue.getStatusId()).isEqualTo(2);
@@ -72,36 +72,36 @@ class IssueServiceTest {
     @Test
     @DisplayName("Patch Assignee")
     void patchAssignee() {
-        Integer issueId = issueService.createIssue(1, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
+        Long issueId = issueService.createIssue(1L, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
 
-        issueService.patchAssignee(issueId, 55);
+        issueService.patchAssignee(issueId, 55L);
 
-        assertThat(issueService.getIssue(issueId).getAssigneeId()).isEqualTo(55);
+        assertThat(issueService.getIssue(issueId).getAssigneeId()).isEqualTo(55L);
     }
 
     @Test
     @DisplayName("Status Lifecycle: Create, Update, Delete")
     void statusLifecycle() {
-        Integer sId = issueService.createStatus(1, "To Do", StatusCategory.TO_DO);
+        Long sId = issueService.createStatus(1, "To Do", StatusCategory.TO_DO);
 
         List<Status> statuses = issueService.getStatuses(1);
         assertThat(statuses).hasSize(1);
-        assertThat(statuses.get(0).getName()).isEqualTo("To Do");
+        assertThat(statuses.getFirst().getName()).isEqualTo("To Do");
 
         issueService.updateStatus(sId, "To Do Updated");
 
-        Status updatedStatus = issueService.getStatuses(1).get(0);
+        Status updatedStatus = issueService.getStatuses(1L).getFirst();
         assertThat(updatedStatus.getName()).isEqualTo("To Do Updated");
 
         boolean deleted = issueService.deleteStatus(sId);
         assertThat(deleted).isTrue();
-        assertThat(issueService.getStatuses(1)).isEmpty();
+        assertThat(issueService.getStatuses(1L)).isEmpty();
     }
 
     @Test
     @DisplayName("Issue CRUD: Create, Get, Update, Delete")
     void issueCrud() {
-        Integer issueId = issueService.createIssue(1, "Login Bug", "Fix it", IssueType.BUG, Priority.HIGH);
+        Long issueId = issueService.createIssue(1, "Login Bug", "Fix it", IssueType.BUG, Priority.HIGH);
 
         Issue issue = issueService.getIssue(issueId);
         assertThat(issue).isNotNull();
@@ -126,18 +126,18 @@ class IssueServiceTest {
 
         issueService.createIssue(2, "Other Project Task", "Desc", IssueType.TASK, Priority.LOW);
 
-        List<Issue> project1Issues = issueService.listIssues(1);
+        List<Issue> project1Issues = issueService.listIssues(1L);
         assertThat(project1Issues).hasSize(2);
 
-        List<Issue> project2Issues = issueService.listIssues(2);
+        List<Issue> project2Issues = issueService.listIssues(2L);
         assertThat(project2Issues).hasSize(1);
     }
 
     @Test
     @DisplayName("Patch Status and History Tracking")
     void patchStatusAndHistory() {
-        Integer issueId = issueService.createIssue(1, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
-        Integer statusId = 100;
+        Long issueId = issueService.createIssue(1L, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
+        Long statusId = 100L;
 
         issueService.patchStatus(issueId, statusId);
 
@@ -148,7 +148,7 @@ class IssueServiceTest {
 
         assertThat(history.size()).isGreaterThanOrEqualTo(1);
 
-        IssueHistory lastChange = history.get(history.size() - 1);
+        IssueHistory lastChange = history.getLast();
         assertThat(lastChange.getFieldChanged()).isEqualTo("status");
         assertThat(lastChange.getNewValue()).isEqualTo(String.valueOf(statusId));
     }
@@ -156,16 +156,11 @@ class IssueServiceTest {
     @Test
     @DisplayName("Patch Assignee and History")
     void patchAssignee() {
-        Integer issueId = issueService.createIssue(1, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
-        Integer assigneeId = 55;
+        Long issueId = issueService.createIssue(1L, "Task 1", "Desc", IssueType.TASK, Priority.MEDIUM);
+        Long assigneeId = 55L;
 
         issueService.patchAssignee(issueId, assigneeId);
 
         assertThat(issueService.getIssue(issueId).getAssigneeId()).isEqualTo(assigneeId);
-
-        List<IssueHistory> history = issueService.getHistory(issueId);
-        boolean hasAssigneeRecord = history.stream()
-                .anyMatch(h -> "assignee".equals(h.getFieldChanged()) && String.valueOf(assigneeId).equals(h.getNewValue()));
-
     }
 }
